@@ -1,0 +1,1 @@
+content = "Hello from multibyte-named script"
