@@ -1,5 +1,7 @@
 === 1.3.17
 - Modified `rake test` to no longer build stubs during test execution. Use `rake build_stub` when stub generation is necessary.
+- Add full support for multibyte (UTF-8) names across executables, scripts, and resources. Requires Windows 10 version 1903 or later.
+- Added UTF-8 manifest to stub.exe to enable UTF-8 support in ANSI API calls.
 
 === 1.3.16
 - Support for Ruby 3.0 and above. Drop ruby 2.6 and 2.7 support.
